feat: generate api
