# config/swagger.json
@@ -72,6 +72,23 @@
         }
       }
     },
+    "/pool/debt_token_name": {
+      "post": {
+        "tags": ["pool"],
+        "description": "",
+        "operationId": "debtTokenName",
+        "produces": ["application/xml", "application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/TokenName"
+            }
+          }
+        }
+      }
+    },
     "/pool/search": {
       "post": {
         "tags": ["pool"],
@@ -146,6 +163,28 @@
       "required": ["token_id"],
       "properties": {
         "token_id": {
+          "type": "string"
+        }
+      }
+    },
+    "TokenName": {
+      "type": "object",
+      "properties": {
+        "symbols": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Symbol"
+          }
+        }
+      }
+    },
+    "Symbol": {
+      "type": "object",
+      "properties": {
+        "symbol": {
+          "type": "string"
+        },
+        "address": {
           "type": "string"
         }
       }
